# KlakSpout

Assets/: Quad.unity
Plugin/: CMakeLists.txt  update.bat
Plugin/KlakSpout/: KlakSpout.cpp  KlakSpoutGlobals.h  KlakSpoutSharedObject.h
